Last version of kubernetes development